fix QA and modernizer issues